# SOS-SLAM

./: .gitignore  CMakeLists.txt  README.md  package.xml
calibs/Aqua/: calib.yaml  camera0.txt  camera1.txt
calibs/Gazebo/: calib.yaml  camera1.txt
calibs/KITTI/0_2/: calib.yaml
launch/: aqua.launch  euroc.launch  gazebo.launch  kitti.launch
src/: SlamNode.cpp  SlamNode.h  main.cpp
src/FullSystem/: CoarseInitializer.cpp  CoarseInitializer.h  CoarseTracker.cpp  CoarseTracker.h  FullSystem.cpp  FullSystem.h  FullSystemMarginalize.cpp  FullSystemOptimize.cpp  HessianBlocks.cpp  HessianBlocks.h  ScaleOptimizer.cpp  ScaleOptimizer.h
src/IOWrapper/Pangolin/: KeyFrameDisplay.cpp  KeyFrameDisplay.h  PangolinSOSVIOViewer.cpp  PangolinSOSVIOViewer.h
src/LoopClosure/: LoopHandler.cpp  LoopHandler.h  PoseEstimator.cpp  PoseEstimator.h  ScanContext.cpp  ScanContext.h
src/OptimizationBackend/: EnergyFunctional.cpp  EnergyFunctional.h  ScaleAccumulator.h
src/util/: FrameShell.h  settings.cpp  settings.h
tests/: absor.m  process.m  run.m  run.sh  run_single.m
tests/EuRoC/: calib.yaml  euroc.launch
tests/KITTI/: kitti.launch
tests/KITTI/0_2/: calib.yaml
tests/Malaga/: calib.yaml  malaga.launch
tests/RobotCar/: calib.yaml  robotcar.launch
tests/TUMVI/: calib.yaml  tumvi.launch
tests/backup/: EnergyFunctional(pprv_fh).cpp  T_euroc.mat
tests/backup/vo_benchmark/: evaluate_odometry  evaluate_odometry.cpp
tests/gazebo/: gazebo_sim.launch  seabed.world  trajectory.py
tests/gazebo/models/data_rig/: model.config  model.sdf
tests/gazebo/models/sand_heightmap/: model.sdf
tests/gazebo/models/sand_heightmap/meshes/: sand.material
tests/gt/: mh4.csv  mh5.csv  r1.csv  r2.csv  r3.csv  r4.csv  r5.csv  r6.csv  v12.csv  v13.csv  v21.csv  v22.csv  v23.csv
tests/results/SplineVIO/: mh1_1.txt  mh1_10.txt  mh1_2.txt  mh1_3.txt  mh1_4.txt  mh1_5.txt  mh1_6.txt  mh1_7.txt  mh1_8.txt  mh1_9.txt  mh2_1.txt  mh2_10.txt  mh2_2.txt  mh2_3.txt  mh2_4.txt  mh2_5.txt  mh2_6.txt  mh2_7.txt  mh2_8.txt  mh2_9.txt  mh3_1.txt  mh3_10.txt  mh3_2.txt  mh3_3.txt  mh3_4.txt  mh3_5.txt  mh3_6.txt  mh3_7.txt  mh3_8.txt  mh3_9.txt  mh4_1.txt  mh4_10.txt  mh4_2.txt  mh4_3.txt  mh4_4.txt  mh4_5.txt  mh4_6.txt  mh4_7.txt  mh4_8.txt  mh4_9.txt  (+59 more)
