<?xml version="1.0"?>
<package format="2">
  <name>sos_slam</name>
  <version>0.0.0</version>
  <description>The sos_slam package</description>

  <maintainer email="moxxx066@umn.edu">Jiawei Mo</maintainer>

  <license>GPLv3</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>gazebo_ros</depend>

  <export>
    <gazebo_ros gazebo_media_path="${prefix}/tests/gazebo" gazebo_model_path="${prefix}/tests/gazebo/models"/>
  </export>
</package>
